# sn

./: .gitignore  Cargo.toml  prep_postgres_env.sh
.devcontainer/: Dockerfile  devcontainer.json
pysrc/: alter_nki.sql  config.py  demo_lr.py  sql_upload_iris.py  sql_upload_kaggle_nerves.py  sqltst.py  sqltstlite.py
sol_test/: s1.py  s2.py
src/: aux.rs  dataset.rs  dp.rs  fact.rs  lr copy.rs  lr.rs  main.rs  main2.rs  main_lr.rs  nn.rs  nnlayer copy.rs  nnlayer.rs  txt.py
