[package]
name = "sn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
opendp = { version = "0.4.0", features = ["contrib"] }
postgres = "0.19"
ndarray = { version = "0.15", features = ["approx"] }
ndarray-stats = "0.5.0"
num-traits = "0.2"

argmin = { version = "0.4.6", features = ["ndarray", "ndarray-rand"] }
serde = "1.0"
thiserror = "1.0"

nalgebra = "0.31.0"
rand = "0.8.5"

probability = "0.18.0"

# linfa = { version = "0.6.0", path = "../..", features=["serde"] }

[dev-dependencies]
approx = "0.4"
#linfa-datasets = { version = "0.6.0", path = "../../datasets", features = ["winequality"] }